--- a/index.html
+++ b/index.html
@@ -1,2 +1,33 @@
-<br>
-hello world!
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Monogamy band</title>
+  </head>
+  <body>
+    <div style="text-align: center;"><img src="https://github.com/dalyons3/monogamyus/blob/main/monogamy_transparent%20%281%29.png?raw=true"
+
+        alt="monogamy" title="monogamy"></div>
+    <div style="text-align: center;"><img src="https://raw.githubusercontent.com/dalyons3/monogamyus/main/PRESS1.jpg"
+
+        alt="pic" title="us" style="width: 984px; height: 657px;"></div>
+    <div style="text-align: center;"><em>Monogamy (est. 2011) is a loose Chicago
+        ensemble currently operating as a trio of Adriana, Sam, and Don,
+        blending charmingly idiomatic sidewalk-jittery Midwestern songwriting
+        with hazy noise-damaged indie pop.</em></div>
+    <div style="text-align: center;"><em> Audiences frequently find themselves
+        obsessed.</em></div>
+    <div style="text-align: center;"><em><br>
+      </em></div>
+    <div style="text-align: center;"><em><a href="monogamy.bandcamp.com" target="_blank">bandcamp</a>
+        | <a href="https://www.instagram.com/monogamyband/" target="_blank">instagram</a>
+        | <a href="https://monogamy.us/disco" target="_blank">discography</a> |
+        <a href="https://monogamy.us/shows.html" target="_blank">shows</a><br>
+      </em></div>
+    <div style="text-align: center;"><em><br>
+      </em></div>
+    <div style="text-align: center;"><em>contact: <a href="mailto:emailmonogamy@gmail.com"
+
+          target="_blank">emailmonogamy@gmail.com</a></em></div>
+  </body>
+</html>
