--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         obsessed.</em></div>
     <div style="text-align: center;"><em><br>
       </em></div>
-    <div style="text-align: center;"><em><a href="monogamy.bandcamp.com" target="_blank">bandcamp</a>
+    <div style="text-align: center;"><em><a href="hhtps://monogamy.bandcamp.com" target="_blank">bandcamp</a>
         | <a href="https://www.instagram.com/monogamyband/" target="_blank">instagram</a>
         | <a href="https://monogamy.us/disco" target="_blank">discography</a> |
         <a href="https://monogamy.us/shows.html" target="_blank">shows</a><br>
