--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <div style="text-align: center;"><img src="https://raw.githubusercontent.com/dalyons3/monogamyus/main/PRESS1.jpg"
 
         alt="pic" title="us" style="width: 984px; height: 657px;"></div>
+    <div style="text-align: center;"><em><strong><br>
+        </strong></em></div>
+    <div style="text-align: center;"><em><strong>* <a href="https://monogamy.bandcamp.com/album/never-seen-you-dance-traspasada"
+
+            target="_blank">order our new record "Never Seen You
+            Dance/Traspasada" now! or die!</a></strong> *<br>
+      </em></div>
+    <div style="text-align: center;"><em><br>
+      </em></div>
     <div style="text-align: center;"><em>Monogamy (est. 2011) is a loose Chicago
         ensemble currently operating as a trio of Adriana, Sam, and Don,
         blending charmingly idiomatic sidewalk-jittery Midwestern songwriting
@@ -19,10 +28,12 @@
         obsessed.</em></div>
     <div style="text-align: center;"><em><br>
       </em></div>
-    <div style="text-align: center;"><em><a href="https://monogamy.bandcamp.com" target="_blank">bandcamp</a>
-        | <a href="https://www.instagram.com/monogamyband/" target="_blank">instagram</a>
-        | <a href="https://monogamy.us/disco" target="_blank">discography</a> |
-        <a href="https://monogamy.us/shows.html" target="_blank">shows</a><br>
+    <div style="text-align: center;"><em><a href="https://monogamy.bandcamp.com"
+
+          target="_blank">bandcamp</a> | <a href="https://www.instagram.com/monogamyband/"
+
+          target="_blank">instagram</a> | <a href="https://monogamy.us/disco" target="_blank">discography</a>
+        | <a href="https://monogamy.us/shows.html" target="_blank">shows</a><br>
       </em></div>
     <div style="text-align: center;"><em><br>
       </em></div>
@@ -31,3 +42,4 @@
           target="_blank">emailmonogamy@gmail.com</a></em></div>
   </body>
 </html>
+
