--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div style="text-align: center;"><img src="https://github.com/dalyons3/monogamyus/blob/main/monogamy_transparent%20%281%29.png?raw=true"
 
         alt="monogamy" title="monogamy"></div>
-    <div style="text-align: center;"><img src="https://github.com/dalyons3/monogamyus/blob/9d3d3b08a7ae92299faaa1de4b33a04af158c143/PRESS4.JPG"
+    <div style="text-align: center;"><img src="hhttps://github.com/dalyons3/monogamyus/blob/957827d969e26a2342121efd7ff6134828fda340/PRESS1.jpg"
 
         alt="pic" title="us" style="width: 984px; height: 657px;"></div>
     <div style="text-align: center;"><em><strong><br>
