--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div style="text-align: center;"><img src="https://github.com/dalyons3/monogamyus/blob/main/monogamy_transparent%20%281%29.png?raw=true"
 
         alt="monogamy" title="monogamy"></div>
-    <div style="text-align: center;"><img src="https://github.com/dalyons3/monogamyus/blob/main/PRESS1.JPG?raw=true"
+    <div style="text-align: center;"><img src="https://github.com/dalyons3/monogamyus/blob/main/PRESS1.jpg?raw=true"
 
         alt="pic" title="us" style="width: 984px; height: 657px;"></div>
     <div style="text-align: center;"><em><strong><br>
